--- a/style.css
+++ b/style.css
@@ -1,9 +1,45 @@
-body{
-    
+*{
+    box-sizing: border-box;
 }
 
-.Grand-container {
- width: 1000px;
- height: 80px;
- border: 3px solid red;
+body{
+  margin: 0;  
 }
+
+.header_wrapper {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: .5rem;
+    width: 80rem;
+    height: 80px;
+    align-items: center;
+}
+
+.header-navigation{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.tag{
+    margin: 1.5rem;
+    margin-right: 0.5rem;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: rgba(209, 213, 219);
+    border-radius: 1000px;
+    text-decoration: none;
+    padding-top: 0.1rem;
+    padding-left: .20rem;
+    padding-bottom: 0.2rem;
+    padding-right: 0.1rem;
+    color: rgba(144, 28, 28);
+
+    
+}
+.header-navigation-title{
+   
+}
+h1{
+    color:rgba(144,28,28);
+     font-size: .60rem; 
+} 
